--- a/app/pages/garments/add-garment/add-garment.component.html
+++ b/app/pages/garments/add-garment/add-garment.component.html
@@ -1,1 +1,29 @@
-<p>Add garment works!</p>
+<ActionBar class="action-bar">
+  <Label class="action-bar-title" text="Add garment"></Label>
+</ActionBar>
+
+<StackLayout class="content">
+  <StackLayout class="page-section">
+    <GridLayout rows="*,*,*,*,*,*,*,*"
+                columns="*">
+
+      <DropDown #dd
+                backroundColor="red"
+                [items]="categories"
+                [(ngModel)]="selectedIndex"
+                (selectedIndexChanged)="onchange($event)"
+                (opened)="onopen()"
+                (closed)="onclose()"
+                row="0">
+       </DropDown>
+       <Label *ngIf="!categorySelected" text="Category:" fontSize="18"></Label>
+       <TextField row="1" hint="Name" [(ngModel)]="garment.name"
+         autocorrect="false" autocapitalizationType="none"></TextField>
+       <TextField row="2" hint="Brand" [(ngModel)]="garment.brand"></TextField>
+       <TextField *ngIf="pantSelected" row="3" hint="Waist size" [(ngModel)]="pant.waistSize"></TextField>
+       <TextField *ngIf="pantSelected" row="4" hint="Waist length" [(ngModel)]="pant.waistLength"></TextField>
+       <TextField *ngIf="shirtSelected" row="3" hint="Size (i.e. 34, 38 or S, XL)" [(ngModel)]="garment.size"></TextField>
+       <Button row="6" class="btn" text="Add garment" (tap)="addGarment(garment)"></Button>
+    </GridLayout>
+  </StackLayout>
+</StackLayout>
