--- a/app/pages/garments/success/add-garment-success.component.html
+++ b/app/pages/garments/success/add-garment-success.component.html
@@ -3,6 +3,6 @@
 </ActionBar>
 <StackLayout class="content">
 
-  <Label text="Garment successfully added!" fontSize="18"></Label>
+  <Label class="success" text="Garment successfully added!"></Label>
 
 </StackLayout>
