--- a/app/app.css
+++ b/app/app.css
@@ -52,3 +52,12 @@ components that have the btn class name.
   font-family: "Times New Roman", Times, serif;
   margin-right: 15px;
 }
+
+.dropdown {
+  font-size: 20px;
+}
+
+.success {
+  color: #078435;
+  font-size: 20px;
+}
