--- a/app/app.css
+++ b/app/app.css
@@ -22,6 +22,10 @@ components that have the btn class name.
     size: auto;
 }
 
+.btn.upload {
+  background-color: #330050;
+}
+
 .boldText {
   font-weight:bold;
 }
