--- a/app/pages/garments/all-garments/all-garments.component.html
+++ b/app/pages/garments/all-garments/all-garments.component.html
@@ -3,11 +3,13 @@
 </ActionBar>
 
 <StackLayout class="content">
+  <ActivityIndicator row="1" #activityIndicator busy="true" (busyChange)="onBusyChanged($event)"
+  width="100" height="100" class="activity-indicator"></ActivityIndicator>
   <StackLayout orientation="vertical" class="page-section">
     <Label class="label-section" text="All items"></Label>
     <StackLayout orientation="horizontal">
       <StackLayout *ngFor="let garment of garments" class="list-group-item" orientation="vertical">
-        <Image row="5" [src]="garment.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit"></Image>
+        <Image row="0" [src]="garment.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit"></Image>
         <!-- <StackLayout row="0" class="layoutBackgroundImageURL" orientation="horizontal"></StackLayout> -->
         <Label  row="1" class="boldText" [text]="garment.name"></Label>
         <Label row="2" [text]="garment.brand"></Label>
