spinners added. Reusable component garment-overview added

--- a/app/pages/garments/add-garment/add-garment.component.html
+++ b/app/pages/garments/add-garment/add-garment.component.html
@@ -4,10 +4,10 @@
 
 <StackLayout class="content">
   <StackLayout class="page-section">
-    <GridLayout rows="*,*,*,*,*,*,*,*"
-                columns="*">
-
-      <DropDown class="dropdown"
+    <GridLayout rows="*,*,*,*,*,*,*,*,*" columns="*">
+      <ActivityIndicator row="1" [busy]="processing" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+      <DropDown [isEnabled]="!processing"
+                class="dropdown"
                 #dd
                 [items]="categories"
                 [(ngModel)]="selectedIndex"
@@ -15,16 +15,18 @@
                 row="0">
        </DropDown>
        <Label class="dropdown" *ngIf="!categorySelected" text="Type:"></Label>
-       <TextField row="1" hint="Name" [(ngModel)]="garment.name"
+       <TextField [isEnabled]="!processing" row="1" hint="Name" [(ngModel)]="garment.name"
          autocorrect="false" autocapitalizationType="none"></TextField>
-       <TextField row="2" hint="Brand" [(ngModel)]="garment.brand"></TextField>
-       <TextField *ngIf="pantSelected" row="3" hint="Waist size" [(ngModel)]="pant.waistSize"></TextField>
-       <TextField *ngIf="pantSelected" row="4" hint="Waist length" [(ngModel)]="pant.waistLength"></TextField>
-       <TextField *ngIf="shirtSelected" row="3" hint="Size (i.e. 34, 38 or S, XL)" [(ngModel)]="shirt.size"></TextField>
-       <Image row="5" [src]="imageSrc" *ngIf="isSingleMode" [width]="previewSize" [height]="previewSize" stretch="aspectFit"></Image>
-       <Button row="6" class="btn upload" text="Upload image" (tap)="getImage()"></Button>
-       <Button row="7" class="btn" text="Add garment" (tap)="addGarment(garment, pant, shirt)"></Button>
+       <TextField [isEnabled]="!processing" row="2" hint="Brand" [(ngModel)]="garment.brand"></TextField>
+       <TextField [isEnabled]="!processing" *ngIf="pantSelected" row="3" hint="Waist size" [(ngModel)]="pant.waistSize"></TextField>
+       <TextField [isEnabled]="!processing" *ngIf="pantSelected" row="4" hint="Waist length" [(ngModel)]="pant.waistLength"></TextField>
+       <TextField [isEnabled]="!processing" *ngIf="shirtSelected" row="3" hint="Size (i.e. 34, 38 or S, XL)" [(ngModel)]="shirt.size"></TextField>
+       <Image [isEnabled]="!processing" row="5" [src]="imageSrc" *ngIf="isSingleMode" [width]="previewSize" [height]="previewSize" stretch="aspectFit"></Image>
+       <Button [isEnabled]="!processing" row="6" class="btn upload" text="Upload image" (tap)="getImage()"></Button>
+       <Button [isEnabled]="!processing" row="7" class="btn" text="Add garment" *ngIf="busy" (tap)="addGarment(garment, pant, shirt)"></Button>
+
     </GridLayout>
+
   </StackLayout>
 </StackLayout>
 <!-- could be added to DropDown element: (opened)="onopen()" (closed)="onclose()" -->
