--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -15,8 +15,9 @@
       <Label text="&#xA;"></Label>
 
        <StackLayout width="100%" *ngFor="let item of garments">
-           <CardView class="studentCard" margin="2" elevation="10" radius="1">
+           <CardView margin="2" elevation="10" radius="1">
               <GridLayout rows="*,*,*,*,*" columns="*">
+                 <ActivityIndicator row="0" [busy]="processing" width="100" height="100" class="activity-indicator"></ActivityIndicator>
                  <Image [src]="item.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
                   <Label class="gridItem boldText" [text]="item.brand" textWrap="true" row="2" ></Label>
                   <Label class="gridItem" [text]="item.name" textWrap="true" row="3"></Label>
@@ -24,6 +25,7 @@
               </GridLayout>
            </CardView>
        </StackLayout>
+
 
       </StackLayout>
     </ScrollView>
