--- a/app/pages/garments/garment-overview/garment-overview.component.html
+++ b/app/pages/garments/garment-overview/garment-overview.component.html
@@ -5,7 +5,8 @@
     <CardView margin="2" elevation="10" radius="1">
        <GridLayout rows="*,*,*,*,*" columns="*">
           <ActivityIndicator row="0" [busy]="processing" width="100" height="100" class="activity-indicator"></ActivityIndicator>
-          <Image [src]="item.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+          <Image [src]="item.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"
+            (tap)="toGarmentDetail(item.id)"></Image>
            <Label class="gridItem boldText" [text]="item.brand" textWrap="true" row="2" ></Label>
            <Label class="gridItem" [text]="item.name" textWrap="true" row="3"></Label>
            <Label text="&#xA;" row="4"></Label>
