--- a/app/pages/swap/request-swap.component.html
+++ b/app/pages/swap/request-swap.component.html
@@ -5,7 +5,9 @@
 
 <StackLayout class="content">
   <StackLayout class="page-section" orientation="vertical">
-    <StackLayout row="0" class="layoutBackgroundImageURL" orientation="horizontal"></StackLayout>
+    <StackLayout orientation="horizontal"></StackLayout>
+    <Image row="0" [src]="garment.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"
+      (tap)="toGarmentDetail(item.id)"></Image>
     <Label row="1" class="boldText" [text]="garment.name"></Label>
     <Label row="2" [text]="garment.brand"></Label>
     <Label row="3" [text]="garment.size"></Label>
@@ -13,7 +15,7 @@
 
   <StackLayout class="page-section">
      <Label text="Enter personal message:" class="label"></Label>
-    <TextField autocorrect="false" class="input input-border" [(ngModel="swapRequest.message")]></TextField>
+    <TextField autocorrect="false" class="input input-border" [(ngModel)]="swapRequest.message"></TextField>
   </StackLayout>
   <Button class="btn" text="Send swap request" (tap)="sendSwapRequest(swapRequest)"></Button>
 </StackLayout>
