--- a/app/app.css
+++ b/app/app.css
@@ -78,3 +78,30 @@ components that have the btn class name.
 :disabled {
   opacity: 0.5;
 }
+
+
+.drawerContentText {
+    font-size: 13;
+    padding: 10;
+}
+
+.drawerContentButton {
+    margin: 10;
+    horizontal-align: left;
+}
+
+.sideStackLayout {
+    background-color: gray;
+}
+
+.sideTitleStackLayout {
+    height: 56;
+    text-align: center;
+    vertical-align: center;
+}
+
+.sideLabel {
+    padding: 10;
+    text-align: center;
+    vertical-align: center;
+}
