--- a/app/pages/garments/all-garments/all-garments.component.html
+++ b/app/pages/garments/all-garments/all-garments.component.html
@@ -2,8 +2,8 @@
   <Label class="action-bar-title" text="All items"></Label>
 </ActionBar>
 
-<StackLayout orientation="vertical" class="content">
-  <StackLayout class="page-section">
+<StackLayout orientation="vertical" class="page">
+  <StackLayout>
     <ScrollView>
       <StackLayout>
       <Label text="&#xA;"></Label>
