--- a/app/pages/garments/garment-overview/garment-overview.component.html
+++ b/app/pages/garments/garment-overview/garment-overview.component.html
@@ -1,6 +1,6 @@
-<ActionBar class="action-bar">
+<!-- <ActionBar class="action-bar">
   <Label class="action-bar-title" text="All items"></Label>
-</ActionBar>
+</ActionBar> -->
 <StackLayout width="100%" *ngFor="let item of garments">
     <CardView margin="2" elevation="10" radius="1">
        <GridLayout rows="*,*,*,*,*" columns="*">
