--- a/app/app.css
+++ b/app/app.css
@@ -9,22 +9,12 @@ In many cases you may want to use the NativeScript core theme instead
 of writing your own CSS rules. For a full list of class names in the theme
 refer to http://docs.nativescript.org/ui/theme.
 */
-@import '~nativescript-theme-core/css/core.light.css';
-
+@import '~nativescript-theme-core/css/forest.css';
 /*
 For example, the following CSS rule changes the font size of all UI
 components that have the btn class name.
 */
-.btn {
-    font-size: 14;
-    background-color: #003351;
-    color: white;
-    size: auto;
-}
 
-.btn.upload {
-  background-color: #330050;
-}
 
 .boldText {
   font-weight:bold;
@@ -32,11 +22,6 @@ components that have the btn class name.
 
 .underline {
   text-decoration: underline;
-}
-
-.action-bar {
-  background-color: #353a3d;
-  color: white;
 }
 
 .content {
@@ -55,11 +40,6 @@ components that have the btn class name.
   font-size: 20px;
 }
 
-.list-group-item {
-  margin-left: 10px;
-  font-family: "Times New Roman", Times, serif;
-  margin-right: 15px;
-}
 
 .dropdown {
   font-size: 20px;
