--- a/app/pages/garments/success/add-garment-success.component.html
+++ b/app/pages/garments/success/add-garment-success.component.html
@@ -1,8 +1,8 @@
 <ActionBar class="action-bar">
   <Label class="action-bar-title" text="Add garment"></Label>
 </ActionBar>
-<StackLayout class="content">
+<StackLayout class="page">
 
-  <Label class="success" text="Garment successfully added!"></Label>
-
+  <Label class="success bg-primary" text="Garment successfully added!"></Label>
+  <StackLayout class="hr-dark m-10"></StackLayout>
 </StackLayout>
