--- a/app/pages/inbox/inbox.component.html
+++ b/app/pages/inbox/inbox.component.html
@@ -10,12 +10,9 @@
       <RadSideDrawer tkExampleTitle tkToggleNavButton>
 
         <StackLayout tkDrawerContent class="sidedrawer-left">
-            <StackLayout class="sideTitleStackLayout">
-                <Label text="Navigation Menu" class="sideLabel sideLightGrayLabel"></Label>
-            </StackLayout>
-            <StackLayout class="sideStackLayout">
-                <Label text="Inbox" class="sideLabel"></Label>
-                <Label text="Send swap requests" class="sideLabel"></Label>
+            <StackLayout>
+                <Label text="Inbox" class="sideLabel sideLightGrayLabel"></Label>
+                <Label text="Send swap requests" class="sideLabel sideLightGrayLabel"></Label>
             </StackLayout>
         </StackLayout>
 
