--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -12,6 +12,8 @@
     <StackLayout tkDrawerContent class="sidedrawer-left">
         <StackLayout>
             <Label text="Inbox" class="sideLabel sideLightGrayLabel"  (tap)="navigateToInbox()"></Label>
+            <Label text="Received requests" class="sideLabel sideLightGrayLabel" (tap)="navigateToReceivedRequests()"></Label>
+            <Label text="Send requests" class="sideLabel sideLightGrayLabel" (tap)="navigateToSendRequests()"></Label>
             <Label text="Settings" class="sideLabel sideLightGrayLabel"></Label>
         </StackLayout>
     </StackLayout>
