--- a/app/pages/swap/send-requests/send-requests.component.html
+++ b/app/pages/swap/send-requests/send-requests.component.html
@@ -1,6 +1,6 @@
 <ActionBar class="action-bar">
   <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="navigateBack()"></NavigationButton>
-  <Label class="action-bar-title" text="Received swap requests"></Label>
+  <Label class="action-bar-title" text="Send swap requests"></Label>
 </ActionBar>
 
 <StackLayout class="page">
